<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        
        <TextView
            android:layout_margin="5dp"
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/tvPublication_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_year"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_genre"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/tvIsbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_isbn"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#4caf50"
            android:text="@string/order"
            android:textColor="#0D47A1"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>



</androidx.cardview.widget.CardView>