<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_name"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_author"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_year"
        android:inputType="number"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_genre"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_isbn"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Switch
        android:layout_margin="5dp"
        android:id="@+id/switchAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/book_available"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btnAddBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/add_book"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>