<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StatisticsActivity">

    <TextView
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:id="@+id/tvReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistic"
        android:textSize="18sp"
        android:layout_gravity="center" />

    <!-- Кнопка для отримання статистики за сьогодні -->
    <Button
        android:layout_margin="5dp"
        app:cornerRadius="1dp"
        android:id="@+id/btnToday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/today"
        />

    <!-- Кнопка для отримання статистики за тиждень -->
    <Button
        android:layout_margin="5dp"
        app:cornerRadius="1dp"
        android:id="@+id/btnWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/week"
        />

    <!-- Кнопка для отримання статистики за місяць -->
    <Button
        android:layout_margin="5dp"
        app:cornerRadius="1dp"
        android:id="@+id/btnMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/month"
        />

</LinearLayout>
