<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTransactionActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spinnerUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minHeight="48dp"/>

    <Spinner
        android:id="@+id/spinnerBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minHeight="48dp"/>

    <EditText
        android:layout_margin="5dp"
        android:inputType="date"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:id="@+id/etIssueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/issue_date"
        android:textColorHint="#000"
        android:textColor="#000"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:inputType="date"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:id="@+id/etReturnDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/return_date"
        android:textColorHint="#000"
        android:textColor="#000"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:inputType="text"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:id="@+id/etStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/status"
        android:textColorHint="#000"
        android:textColor="#000"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnUpdateTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/update_transaction"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>